--- a/source/B2BApi/B2BApi.csproj
+++ b/source/B2BApi/B2BApi.csproj
@@ -23,6 +23,7 @@ limitations under the License.
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="DurableFunctionsMonitor.DotNetIsolated" Version="6.6.0" />
         <PackageReference Include="Energinet.DataHub.Core.Databricks.SqlStatementExecution" Version="12.0.2"/>
         <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="1.0.2"/>
         <PackageReference Include="Energinet.DataHub.ProcessManager.Abstractions" Version="1.2.0" />
