--- a/source/B2BApi/B2BApi.csproj
+++ b/source/B2BApi/B2BApi.csproj
@@ -27,7 +27,7 @@ limitations under the License.
         <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="1.0.2"/>
         <PackageReference Include="Energinet.DataHub.ProcessManager.Abstractions" Version="1.5.0" />
         <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="1.5.0" />
-        <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="1.4.0" />
+        <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="1.5.0-alpha-141" />
         <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.2.3" />
         <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.4"/>
