before trying to fix tests

--- a/source/IntegrationTests/IntegrationTests.csproj
+++ b/source/IntegrationTests/IntegrationTests.csproj
@@ -179,7 +179,7 @@ limitations under the License.
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Application\Process\" />
+      <Folder Include="Infrastructure\Configuration\" />
     </ItemGroup>
 
     <ItemDefinitionGroup>
