--- a/source/B2BApi/B2BApi.csproj
+++ b/source/B2BApi/B2BApi.csproj
@@ -26,11 +26,11 @@ limitations under the License.
         <PackageReference Include="DurableFunctionsMonitor.DotNetIsolated" Version="6.6.0" />
         <PackageReference Include="Energinet.DataHub.Core.Databricks.SqlStatementExecution" Version="12.0.2"/>
         <PackageReference Include="Energinet.DataHub.Core.Outbox" Version="1.0.2"/>
-        <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
+        <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.2.2" />
         <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.4"/>
         <PackageReference Include="Energinet.DataHub.Core.App.FunctionApp" Version="14.0.2"/>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />Microsoft.ApplicationInsights
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.22.1" />
@@ -39,7 +39,7 @@ limitations under the License.
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
         <PackageReference Include="Energinet.DataHub.Core.Messaging" Version="6.1.3"/>
         <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
-      <!--Microsoft.IdentityModel.XX has to be in sync, aka. same version-->
+        <!--Microsoft.IdentityModel.XX has to be in sync, aka. same version-->
         <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.5.0" />
         <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="8.5.0" />
         <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.5.0" />
