--- a/source/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/source/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Energinet.DataHub.Core.Messaging" Version="6.1.3"/>
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="4.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.2">
