--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -86,6 +86,9 @@ limitations under the License.
       <EmbeddedResource Include="CimMessageAdapter\Messages\json\MeteredDataForMeteringPoint\InvalidMeteredDataForMeteringPoint.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
+      <EmbeddedResource Include="CimMessageAdapter\Messages\json\MeteredDataForMeteringPoint\InvalidMeteredDataForMeteringPointMissingRegistration.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
       <EmbeddedResource Include="CimMessageAdapter\Messages\json\MeteredDataForMeteringPoint\ValidMeteredDataForMeteringPointWithTwoTransactions.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
@@ -108,6 +111,9 @@ limitations under the License.
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="CimMessageAdapter\Messages\xml\MeteredDataForMeteringPoint\InvalidMeteredDataForMeteringPoint.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="CimMessageAdapter\Messages\xml\MeteredDataForMeteringPoint\InvalidMeteredDataForMeteringPointMissingRegistration.xml">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="CimMessageAdapter\Messages\xml\MeteredDataForMeteringPoint\ValidMeteredDataForMeteringPoint.xml">
