--- a/.github/workflows/ci-dotnet.yml
+++ b/.github/workflows/ci-dotnet.yml
@@ -30,9 +30,6 @@ jobs:
       fail-fast: false
       matrix:
         tests_filter_expression:
-          - name: Architecture Tests
-            paths: \source\ArchitectureTests\bin\Release\net8.0\Energinet.DataHub.EDI.ArchitectureTests.dll
-
           - name: Tests
             paths: \source\Tests\bin\Release\net8.0\Energinet.DataHub.EDI.Tests.dll
 
@@ -53,6 +50,12 @@ jobs:
       fail-fast: false
       matrix:
         tests_filter_expression:
+          - name: Architecture Tests
+            paths: \source\ArchitectureTests\bin\Release\net8.0\Energinet.DataHub.EDI.ArchitectureTests.dll
+            filter: empty # Means skip
+            use_azure_functions_tools: true
+            contentroot_variable_name: empty # Means skip
+
           - name: B2BApi AppTests
             paths: \source\Tests\bin\Release\net8.0\Energinet.DataHub.EDI.B2BApi.AppTests.dll
             filter: empty # Means skip
