--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -70,9 +70,12 @@ limitations under the License.
       <None Update="CimMessageAdapter\Messages\xml\WholesaleSettlement\RequestWholesaleSettlement.xml">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-        <None Update="Infrastructure\OutgoingMessages\RSM009\Acknowledgement-assembly-model.schema.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
+      <None Update="Infrastructure\OutgoingMessages\Schemas\RSM009\Json\Acknowledgement-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Infrastructure\OutgoingMessages\Schemas\Json\Acknowledgement-assembly-model.schema.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -127,10 +130,12 @@ limitations under the License.
       <EmbeddedResource Include="CimMessageAdapter\Messages\xml\WholesaleSettlement\RequestWholesaleSettlementOneSmallOneBigSeries.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
-        <EmbeddedResource Include="Infrastructure\OutgoingMessages\RSM009\urn-entsoe-eu-local-extension-types.schema.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </EmbeddedResource>
-        <EmbeddedResource Include="Infrastructure\OutgoingMessages\RSM009\urn-entsoe-eu-wgedi-codelists.schema.json">
+      <EmbeddedResource Include="Infrastructure\OutgoingMessages\Schemas\Json\urn-entsoe-eu-local-extension-types.schema.json" />
+      <EmbeddedResource Include="Infrastructure\OutgoingMessages\Schemas\Json\urn-entsoe-eu-wgedi-codelists.schema.json" />
+      <EmbeddedResource Include="Infrastructure\OutgoingMessages\Schemas\Xml\urn-entsoe-eu-local-extension-types.xsd">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Infrastructure\OutgoingMessages\Schemas\Xml\urn-entsoe-eu-wgedi-codelists.xsd">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <None Include="CimMessageAdapter\Messages\xml\WholesaleSettlement\RequestWholesaleSettlementTwoSeries.xml">
@@ -179,6 +184,9 @@ limitations under the License.
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
         <EmbeddedResource Include="CimMessageAdapter\Messages\json\MeteredDataForMeteringPoint\ValidMeteredDataForMeteringPoint.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Infrastructure\OutgoingMessages\Schemas\Xml\urn-ediel-org-general-acknowledgement-0-1.xsd">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
     </ItemGroup>
