--- a/source/IncomingMessages.Infrastructure/IncomingMessages.Infrastructure.csproj
+++ b/source/IncomingMessages.Infrastructure/IncomingMessages.Infrastructure.csproj
@@ -22,8 +22,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="AdaskoTheBeAsT.Dapper.NodaTime" Version="5.0.0" />
-    <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="2.1.0" />
-    <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="1.11.1" />
+    <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="2.2.0-alpha-154" />
+    <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="1.11.2-alpha-160" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.10.0" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.2">
