--- a/.github/workflows/ci-dotnet.yml
+++ b/.github/workflows/ci-dotnet.yml
@@ -36,6 +36,9 @@ jobs:
           - name: OutgoingMessages Unit Tests
             paths: \source\OutgoingMessages.UnitTests\bin\Release\net8.0\Energinet.DataHub.EDI.OutgoingMessages.UnitTests.dll
 
+          - name: IncomingMessages Unit Tests
+            paths: \source\IncomingMessages.UnitTests\bin\Release\net8.0\Energinet.DataHub.EDI.IncomingMessages.UnitTests.dll
+
     uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v14
     with:
       download_attempt_limit: 40 # waits for 40 * 15 seconds = 10 minutes.
