--- a/source/IntegrationTests/IntegrationTests.csproj
+++ b/source/IntegrationTests/IntegrationTests.csproj
@@ -66,6 +66,7 @@ limitations under the License.
         <ProjectReference Include="..\IncomingMessages.Infrastructure\IncomingMessages.Infrastructure.csproj" />
         <ProjectReference Include="..\IncomingMessages.IntegrationTests\IncomingMessages.IntegrationTests.csproj" />
         <ProjectReference Include="..\IntegrationEvents.Application\IntegrationEvents.Application.csproj" />
+        <ProjectReference Include="..\IntegrationEvents.Infrastructure\IntegrationEvents.Infrastructure.csproj" />
         <ProjectReference Include="..\IntegrationEvents.IntegrationTests\IntegrationEvents.IntegrationTests.csproj" />
         <ProjectReference Include="..\MasterData.Infrastructure\MasterData.Infrastructure.csproj" />
         <ProjectReference Include="..\MasterData.IntegrationTests\MasterData.IntegrationTests.csproj" />
