Add RSM-009 bundling

--- a/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
+++ b/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
@@ -217,6 +217,7 @@ limitations under the License.
     <EmbeddedResource Include="Scripts\Model\202503261904 Add RowVersion to OutgoingMessages table.sql" />
     <EmbeddedResource Include="Scripts\Model\202503271548 Create index IX_OutgoingMessages_BundleMetadataForMessagesReadyToBeBundled.sql" />
     <EmbeddedResource Include="Scripts\Model\202503280930 Create index IX_OutgoingMessages_MessagesForBundle.sql" />
+    <EmbeddedResource Include="Scripts\Model\202503311523 Add RelatedToMessageId to index IX_OutgoingMessages_BundleMetadataForMessagesReadyToBeBundled.sql" />
     <None Remove="Scripts\Model\202227101333 Add AggregatedTimeSeriesTransactions table.sql" />
     <None Remove="Scripts\Model\202310201142 resize ActorNumber nvarchar on Actor.sql" />
     <None Remove="Scripts\Model\202310231329 Alter Bundles1.sql" />
