--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,7 @@
-*                   @Energinet-DataHub/team-mosaic
-/.github/actions    @Energinet-DataHub/TeamFusion
-/.github/workflows  @Energinet-DataHub/TeamFusion
+* @Energinet-DataHub/team-mosaic
+
+/.github/actions @Energinet-DataHub/TeamFusion @Energinet-DataHub/team-mosaic
+/.github/workflows @Energinet-DataHub/TeamFusion @Energinet-DataHub/team-mosaic
+/.github/CODEOWNERS @Energinet-DataHub/TeamFusion
+/.github/workflows/ci-orchestrator.yml @Energinet-DataHub/TeamFusion
+/.github/workflows/cd.yml @Energinet-DataHub/TeamFusion
