--- a/source/SubsystemTests/SubsystemTests.csproj
+++ b/source/SubsystemTests/SubsystemTests.csproj
@@ -88,8 +88,8 @@
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Energinet.DataHub.Core.DurableFunctionApp.TestCommon" Version="8.2.1" />
         <PackageReference Include="Energinet.DataHub.Core.FunctionApp.TestCommon" Version="8.2.1" />
-        <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="5.0.2" />
-        <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="2.2.4" />
+        <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="6.0.0-alpha-204" />
+        <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="2.3.1-alpha-204" />
         <PackageReference Include="FluentAssertions" Version="7.0.0" />
         <PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1">
           <PrivateAssets>all</PrivateAssets>
